0.9/_sources/min_dependency_table.rst.txt
======================= =================== ====================================
Dependency              Minimum Version     Purpose
======================= =================== ====================================
numpy                   1.17.3              build, install
scipy                   1.3.2               build, install
joblib                  1.0.0               install
threadpoolctl           2.0.0               install
cython                  0.29.24             build
matplotlib              3.1.2               benchmark, docs, examples, tests
scikit-image            0.14.5              docs, examples, tests
pandas                  1.0.5               benchmark, docs, examples, tests
seaborn                 0.9.0               docs, examples
memory_profiler         0.57.0              benchmark, docs
pytest                  5.0.1               tests
pytest-cov              2.9.0               tests
flake8                  3.8.2               tests
black                   22.3.0              tests
mypy                    0.770               tests
pyamg                   4.0.0               tests
sphinx                  4.0.1               docs
sphinx-gallery          0.7.0               docs
numpydoc                1.2.0               docs, tests
Pillow                  7.1.2               docs
sphinx-prompt           1.3.0               docs
sphinxext-opengraph     0.4.2               docs
======================= =================== ====================================
