0.12/_sources/min_dependency_table.rst.txt
========================== =================== ====================================
Dependency                 Minimum Version     Purpose
========================== =================== ====================================
numpy                      1.19.5              build, install
scipy                      1.6.0               build, install
joblib                     1.2.0               install
threadpoolctl              3.1.0               install
cython                     3.0.10              build
meson-python               0.16.0              build
matplotlib                 3.3.4               benchmark, docs, examples, tests
scikit-image               0.17.2              docs, examples, tests
pandas                     1.1.5               benchmark, docs, examples, tests
seaborn                    0.9.0               docs, examples
memory_profiler            0.57.0              benchmark, docs
pytest                     7.1.2               tests
pytest-cov                 2.9.0               tests
ruff                       0.2.1               tests
black                      24.3.0              tests
mypy                       1.9                 tests
pyamg                      4.0.0               tests
polars                     0.20.30             docs, tests
pyarrow                    12.0.0              tests
sphinx                     7.3.7               docs
sphinx-copybutton          0.5.2               docs
sphinx-gallery             0.16.0              docs
numpydoc                   1.2.0               docs, tests
Pillow                     7.1.2               docs
pooch                      1.6.0               docs, examples, tests
sphinx-prompt              1.4.0               docs
sphinxext-opengraph        0.9.1               docs
plotly                     5.14.0              docs, examples
sphinxcontrib-sass         0.3.4               docs
sphinx-remove-toctrees     1.0.0.post1         docs
sphinx-design              0.6.0               docs
pydata-sphinx-theme        0.15.3              docs
conda-lock                 2.5.6               maintenance
========================== =================== ====================================
